一旦コミット

--- a/cmd/resources/i18n/app.ja.json
+++ b/cmd/resources/i18n/app.ja.json
@@ -34,5 +34,13 @@
     {
         "id": "出力モデルの使い方",
         "translation": "・ブレ設定が入ったモデルの出力先ファイルパスを設定できます。\n・自動で出力先が設定されますが、任意のパスに変更する事もできます"
+    },
+    {
+        "id": "Step1Label",
+        "translation": "\n・ブレ設定を入れたいPmxモデルを指定してください\n・モーションの設定は任意です"
+    },
+    {
+        "id": "Step2Label",
+        "translation": "・ブレ設定を入れたい材質のみが選ばれている状態にしてください\n・日本刀の場合、刀身に関する材質のみを選択してください"
     }
 ]
