材質リスト表示

--- a/cmd/resources/i18n/app.ja.json
+++ b/cmd/resources/i18n/app.ja.json
@@ -42,5 +42,13 @@
     {
         "id": "Step2Label",
         "translation": "・ブレ設定を入れたい材質のみが選ばれている状態にしてください\n・日本刀の場合、刀身に関する材質のみを選択してください"
+    },
+    {
+        "id": "Step1モデル設定完了",
+        "translation": "ブレ設定対象モデルが正常に読み込まれました。\nStep.2タブに進んでください"
+    },
+    {
+        "id": "Step2材質設定完了",
+        "translation": "ブレ設定対象材質が正常に設定されました。\nStep.3タブに進んでください"
     }
 ]
