mlibアップデート追従

--- a/cmd/resources/i18n/app.ja.json
+++ b/cmd/resources/i18n/app.ja.json
@@ -40,15 +40,39 @@
         "translation": "・ブレ設定を入れたいPmxモデルを指定してください\n・モーションの設定は任意です"
     },
     {
-        "id": "Step2Label",
-        "translation": "・ブレ設定を入れたい材質のみが選ばれている状態にしてください\n・日本刀の場合、刀身に関する材質のみを選択してください"
-    },
-    {
         "id": "Step1モデル設定完了",
         "translation": "ブレ設定対象モデルが正常に読み込まれました。\nStep.2タブに進んでください"
     },
     {
+        "id": "Step1モデル設定失敗",
+        "translation": "ブレ設定対象モデルの読み込みに失敗しました。\n正しいファイルパスが指定されているか確認してください"
+    },
+    {
+        "id": "Step2Label",
+        "translation": "・ブレ設定を入れたい材質のみが選ばれている状態にしてください\n・日本刀の場合、刀身に関する材質のみを選択してください"
+    },
+    {
         "id": "Step2材質設定完了",
         "translation": "ブレ設定対象材質が正常に設定されました。\nStep.3タブに進んでください"
+    },
+    {
+        "id": "Step2材質設定失敗",
+        "translation": "ブレ設定対象材質が選択されていません。\nブレを設定したい材質を1件以上選択してください"
+    },
+    {
+        "id": "Step3Label",
+        "translation": "・ブレ設定を入れたい材質の峰(みね)部分を手元から切っ先に向かって頂点を選択してください。\n・日本刀の場合、棟区(むねまち)から棟先(むねさき)までです。\n・選択した頂点の順番に下記のリストボックスに追加されます。\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
+    },
+    {
+        "id": "Step3材質設定完了",
+        "translation": "ブレ設定対象峰頂点が正常に設定されました。\nStep.4タブに進んでください"
+    },
+    {
+        "id": "Step3材質設定失敗",
+        "translation": "ブレ設定対象峰頂点が選択されていません。\nブレを設定したい頂点を1件以上選択してください"
+    },
+    {
+        "id": "次へ進む",
+        "translation": "次へ進む"
     }
 ]
