--- a/cmd/resources/i18n/common.ja.json
+++ b/cmd/resources/i18n/common.ja.json
@@ -16,12 +16,12 @@
         "translation": "&物理リセット"
     },
     {
-        "id": "&法線デバッグ表示",
-        "translation": "&法線デバッグ表示"
+        "id": "&法線表示",
+        "translation": "&法線表示"
     },
     {
-        "id": "&ボーンデバッグ表示",
-        "translation": "&ボーンデバッグ表示"
+        "id": "&ボーン表示",
+        "translation": "&ボーン表示"
     },
     {
         "id": "&全ボーン",
@@ -52,12 +52,12 @@
         "translation": "&表示ボーン"
     },
     {
-        "id": "&剛体デバッグ表示",
-        "translation": "&剛体デバッグ表示"
+        "id": "&剛体表示",
+        "translation": "&剛体表示"
     },
     {
-        "id": "&ジョイントデバッグ表示",
-        "translation": "&ジョイントデバッグ表示"
+        "id": "&ジョイント表示",
+        "translation": "&ジョイント表示"
     },
     {
         "id": "背景色生成エラー",
@@ -324,8 +324,8 @@
         "translation": "背面"
     },
     {
-        "id": "&ワイヤーフレームデバッグ表示",
-        "translation": "&ワイヤーフレームデバッグ表示"
+        "id": "&ワイヤーフレーム表示",
+        "translation": "&ワイヤーフレーム表示"
     },
     {
         "id": "&前面表示",
@@ -354,5 +354,9 @@
     {
         "id": "&fps無制限",
         "translation": "&fps無制限"
+    },
+    {
+        "id": "&選択頂点表示",
+        "translation": "&選択頂点表示"
     }
 ]
