--- a/cmd/resources/i18n/common.ko.json
+++ b/cmd/resources/i18n/common.ko.json
@@ -16,12 +16,12 @@
         "translation": "&물리 리셋"
     },
     {
-        "id": "&法線デバッグ表示",
-        "translation": "&법선 디버그 표시"
+        "id": "&法線表示",
+        "translation": "&노멀 표시"
     },
     {
-        "id": "&ボーンデバッグ表示",
-        "translation": "&본 디버그 표시"
+        "id": "&ボーン表示",
+        "translation": "&본 표시"
     },
     {
         "id": "&全ボーン",
@@ -52,12 +52,12 @@
         "translation": "&표시 뼈대"
     },
     {
-        "id": "&剛体デバッグ表示",
-        "translation": "&강체 디버그 표시"
+        "id": "&剛体表示",
+        "translation": "&강체 표시"
     },
     {
-        "id": "&ジョイントデバッグ表示",
-        "translation": "&조인트 디버그 표시"
+        "id": "&ジョイント表示",
+        "translation": "&조인트 표시"
     },
     {
         "id": "背景色生成エラー",
@@ -324,8 +324,8 @@
         "translation": "뒷면"
     },
     {
-        "id": "&ワイヤーフレームデバッグ表示",
-        "translation": "&와이어프레임 디버그 보기"
+        "id": "&ワイヤーフレーム表示",
+        "translation": "&와이어프레임 표시"
     },
     {
         "id": "&前面表示",
@@ -354,5 +354,9 @@
     {
         "id": "&fps無制限",
         "translation": "&FPS 무제한"
+    },
+    {
+        "id": "&選択頂点表示",
+        "translation": "&선택된 정점 표시"
     }
 ]
