--- a/cmd/resources/i18n/common.zh.json
+++ b/cmd/resources/i18n/common.zh.json
@@ -16,12 +16,12 @@
         "translation": "&物理重置"
     },
     {
-        "id": "&法線デバッグ表示",
-        "translation": "&法线调试显示"
+        "id": "&法線表示",
+        "translation": "&法线显示"
     },
     {
-        "id": "&ボーンデバッグ表示",
-        "translation": "&骨骼调试显示"
+        "id": "&ボーン表示",
+        "translation": "&骨骼显示"
     },
     {
         "id": "&全ボーン",
@@ -52,12 +52,12 @@
         "translation": "&显示骨骼"
     },
     {
-        "id": "&剛体デバッグ表示",
-        "translation": "&刚体调试显示"
+        "id": "&剛体表示",
+        "translation": "&刚体显示"
     },
     {
-        "id": "&ジョイントデバッグ表示",
-        "translation": "&关节调试显示"
+        "id": "&ジョイント表示",
+        "translation": "&关节显示"
     },
     {
         "id": "背景色生成エラー",
@@ -324,8 +324,8 @@
         "translation": "背面"
     },
     {
-        "id": "&ワイヤーフレームデバッグ表示",
-        "translation": "&线框调试视图"
+        "id": "&ワイヤーフレーム表示",
+        "translation": "&线框显示"
     },
     {
         "id": "&前面表示",
@@ -354,5 +354,9 @@
     {
         "id": "&fps無制限",
         "translation": "&无限制FPS"
+    },
+    {
+        "id": "&選択頂点表示",
+        "translation": "&选择顶点显示"
     }
 ]
