--- a/cmd/resources/i18n/app.ja.json
+++ b/cmd/resources/i18n/app.ja.json
@@ -36,12 +36,16 @@
         "translation": "・ブレ設定が入ったモデルの出力先ファイルパスを設定できます。\n・自動で出力先が設定されますが、任意のパスに変更する事もできます"
     },
     {
+        "id": "次へ進む",
+        "translation": "次へ進む"
+    },
+    {
         "id": "Step1Label",
-        "translation": "・ブレ設定を入れたいPmxモデルを指定してください\n・モーションの設定は任意です"
+        "translation": "・ブレ設定を入れたいPmxモデルを指定してください\n・モーションの設定は任意です\n・モデルの表示を確認できたら下部の「次へ進む」ボタンをクリックしてください"
     },
     {
         "id": "Step1モデル設定完了",
-        "translation": "ブレ設定対象モデルが正常に読み込まれました。\nStep.2タブに進んでください"
+        "translation": "ブレ設定対象モデルが正常に読み込まれました。\nStep.2タブに進みます"
     },
     {
         "id": "Step1モデル設定失敗",
@@ -53,7 +57,7 @@
     },
     {
         "id": "Step2材質設定完了",
-        "translation": "ブレ設定対象材質が正常に設定されました。\nStep.3タブに進んでください"
+        "translation": "ブレ設定対象材質が正常に設定されました。\nStep.3タブに進みます"
     },
     {
         "id": "Step2材質設定失敗",
@@ -64,15 +68,23 @@
         "translation": "・ブレ設定を入れたい材質の峰(みね)部分を手元から切っ先に向かって頂点を選択してください。\n・日本刀の場合、棟区(むねまち)から棟先(むねさき)までです。\n・選択した頂点の順番に下記のリストボックスに追加されます。\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
     },
     {
-        "id": "Step3材質設定完了",
-        "translation": "ブレ設定対象峰頂点が正常に設定されました。\nStep.4タブに進んでください"
+        "id": "Step3峰頂点設定完了",
+        "translation": "ブレ設定対象峰頂点が正常に設定されました。\nStep.4タブに進みます"
     },
     {
-        "id": "Step3材質設定失敗",
-        "translation": "ブレ設定対象峰頂点が選択されていません。\nブレを設定したい頂点を1件以上選択してください"
+        "id": "Step3峰頂点設定失敗",
+        "translation": "ブレ設定対象峰頂点が選択されていません。\nブレを設定したい峰頂点を1件以上選択してください"
     },
     {
-        "id": "次へ進む",
-        "translation": "次へ進む"
+        "id": "Step4Label",
+        "translation": "・ブレ設定を入れたい材質の刃部分を手元から切っ先に向かって頂点を選択してください。\n・日本刀の場合、刃区(はまち)から刃先(はさき)までです。\n・選択した頂点の順番に下記のリストボックスに追加されます。\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
+    },
+    {
+        "id": "Step4刃頂点設定完了",
+        "translation": "ブレ設定対象刃頂点が正常に設定されました。\nStep.5タブに進みます"
+    },
+    {
+        "id": "Step4刃頂点設定失敗",
+        "translation": "ブレ設定対象刃頂点が選択されていません。\nブレを設定したい刃頂点を1件以上選択してください"
     }
 ]
