--- a/cmd/resources/i18n/app.ja.json
+++ b/cmd/resources/i18n/app.ja.json
@@ -40,6 +40,10 @@
         "translation": "次へ進む"
     },
     {
+        "id": "出力",
+        "translation": "出力する"
+    },
+    {
         "id": "Step1Label",
         "translation": "・ブレ設定を入れたいPmxモデルを指定してください\n・モーションの設定は任意です\n・モデルの表示を確認できたら下部の「次へ進む」ボタンをクリックしてください"
     },
@@ -86,5 +90,21 @@
     {
         "id": "Step4刃頂点設定失敗",
         "translation": "ブレ設定対象刃頂点が選択されていません。\nブレを設定したい刃頂点を1件以上選択してください"
+    },
+    {
+        "id": "出力失敗",
+        "translation": "出力失敗"
+    },
+    {
+        "id": "出力成功",
+        "translation": "出力成功"
+    },
+    {
+        "id": "出力失敗メッセージ",
+        "translation": "ブレ設定付きモデルの出力に失敗しました\nエラーメッセージ: {{.Error}}"
+    },
+    {
+        "id": "出力成功メッセージ",
+        "translation": "ブレ設定付きモデルの出力に成功しました\n出力先ファイルパス: {{.Path}}"
     }
 ]
