--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -40,8 +40,12 @@
         "translation": "次へ進む"
     },
     {
-        "id": "出力",
-        "translation": "出力する"
+        "id": "保存",
+        "translation": "保存する"
+    },
+    {
+        "id": "プレビュー",
+        "translation": "プレビューで確認する"
     },
     {
         "id": "Step1Label",
@@ -92,6 +96,22 @@
         "translation": "ブレ設定対象刃頂点が選択されていません。\nブレを設定したい刃頂点を1件以上選択してください"
     },
     {
+        "id": "生成失敗",
+        "translation": "生成失敗"
+    },
+    {
+        "id": "生成成功",
+        "translation": "生成成功"
+    },
+    {
+        "id": "生成失敗メッセージ",
+        "translation": "ブレ設定付きモデルの生成に失敗しました\nエラーメッセージ: {{.Error}}"
+    },
+    {
+        "id": "生成成功メッセージ",
+        "translation": "ブレ設定付きモデルの生成に成功しました\n元モデルの上にプレビューモデルが回っています\n【確認事項】\n・峰側にだけブレが伸びているか … 勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています（基本的に振り下ろす方向）\n　　おかしな方向にブレが伸びていないかを確認してください\n・ブレ材質に頂点の抜けがないか … 峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.4 の刃頂点の選択から必要な頂点の選択が抜けています。"
+    },
+    {
         "id": "出力失敗",
         "translation": "出力失敗"
     },
@@ -105,6 +125,14 @@
     },
     {
         "id": "出力成功メッセージ",
-        "translation": "ブレ設定付きモデルの出力に成功しました\n出力先ファイルパス: {{.Path}}"
+        "translation": "ブレ設定付きモデルの出力に成功しました\n{{.Path}}"
+    },
+    {
+        "id": "出力モデルなし",
+        "translation": "出力モデルなし"
+    },
+    {
+        "id": "出力モデルなしメッセージ",
+        "translation": "出力可能なブレ設定付きモデルが見つかりませんでした。\nプレビューをやり直してください"
     }
 ]
