頂点を表示材質からのみ取れるように

--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -109,7 +109,7 @@
     },
     {
         "id": "生成成功メッセージ",
-        "translation": "ブレ設定付きモデルの生成に成功しました\n元モデルの上にプレビューモデルが回っています\n【確認事項】\n・峰側にだけブレが伸びているか … 勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています（基本的に振り下ろす方向）\n　　おかしな方向にブレが伸びていないかを確認してください\n・ブレ材質に頂点の抜けがないか … 峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.4 の刃頂点の選択から必要な頂点の選択が抜けています。"
+        "translation": "ブレ設定付きモデルの生成に成功しました\n元モデルの上にプレビューモデルが回っています\n【確認事項】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています（基本的に振り下ろす方向）\n　　おかしな方向にブレが伸びていないかを確認してください\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.4 の刃頂点の選択から必要な頂点の選択が抜けています。"
     },
     {
         "id": "出力失敗",
