リトライボタン追加

--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -48,6 +48,10 @@
         "translation": "プレビューで確認する"
     },
     {
+        "id": "リトライ",
+        "translation": "プレビューを取り消して、再調整する"
+    },
+    {
         "id": "Step1Label",
         "translation": "・ブレ設定を入れたいPmxモデルを指定してください\n・モーションの設定は任意です\n・モデルの表示を確認できたら下部の「次へ進む」ボタンをクリックしてください"
     },
