--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -56,11 +56,11 @@
         "translation": "・ブレ設定を入れたいPmxモデルを指定してください\n・モーションの設定は任意です\n・モデルの表示を確認できたら下部の「次へ進む」ボタンをクリックしてください"
     },
     {
-        "id": "Step1モデル設定完了",
+        "id": "Step1成功",
         "translation": "ブレ設定対象モデルが正常に読み込まれました。\nStep.2タブに進みます"
     },
     {
-        "id": "Step1モデル設定失敗",
+        "id": "Step1失敗",
         "translation": "ブレ設定対象モデルの読み込みに失敗しました。\n正しいファイルパスが指定されているか確認してください"
     },
     {
@@ -68,36 +68,40 @@
         "translation": "・ブレ設定を入れたい材質のみが選ばれている状態にしてください\n・日本刀の場合、刀身に関する材質のみを選択してください"
     },
     {
-        "id": "Step2材質設定完了",
+        "id": "Step2成功",
         "translation": "ブレ設定対象材質が正常に設定されました。\nStep.3タブに進みます"
     },
     {
-        "id": "Step2材質設定失敗",
+        "id": "Step2失敗",
         "translation": "ブレ設定対象材質が選択されていません。\nブレを設定したい材質を1件以上選択してください"
     },
     {
         "id": "Step3Label",
-        "translation": "・ブレ設定を入れたい材質の峰(みね)部分を手元から切っ先に向かって頂点を選択してください。\n・日本刀の場合、棟区(むねまち)から棟先(むねさき)までです。\n・選択した頂点の順番に下記のリストボックスに追加されます。\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
+        "translation": "・ブレ設定を入れたい材質の峰(みね)部分を開始地点の頂点を一点選択してください。\n・日本刀の場合、棟区(むねまち)です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
     },
     {
-        "id": "Step3峰頂点設定完了",
-        "translation": "ブレ設定対象峰頂点が正常に設定されました。\nStep.4タブに進みます"
+        "id": "Step3成功",
+        "translation": "ブレ設定対象峰開始頂点が正常に設定されました。\nStep.4タブに進みます"
     },
     {
-        "id": "Step3峰頂点設定失敗",
-        "translation": "ブレ設定対象峰頂点が選択されていません。\nブレを設定したい峰頂点を1件以上選択してください"
+        "id": "Step3失敗",
+        "translation": "ブレ設定対象峰開始頂点が選択されていません。\nブレ設定を入れたい材質の峰(みね)部分を開始地点の頂点を一点選択してください。"
     },
     {
         "id": "Step4Label",
-        "translation": "・ブレ設定を入れたい材質の刃部分を手元から切っ先に向かって頂点を選択してください。\n・日本刀の場合、刃区(はまち)から刃先(はさき)までです。\n・選択した頂点の順番に下記のリストボックスに追加されます。\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
+        "translation": "・ブレ設定を入れたい材質の切っ先部分の頂点を一点選択してください。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
     },
     {
-        "id": "Step4刃頂点設定完了",
-        "translation": "ブレ設定対象刃頂点が正常に設定されました。\nStep.5タブに進みます"
+        "id": "Step4成功",
+        "translation": "ブレ設定対象切っ先頂点が正常に設定されました。\nStep.5タブに進みます"
     },
     {
-        "id": "Step4刃頂点設定失敗",
-        "translation": "ブレ設定対象刃頂点が選択されていません。\nブレを設定したい刃頂点を1件以上選択してください"
+        "id": "Step4失敗",
+        "translation": "ブレ設定対象切っ先頂点が選択されていません。\nブレ設定を入れたい材質の切っ先部分の頂点を一点選択してください。"
+    },
+    {
+        "id": "Step5Label",
+        "translation": "・ブレ設定を入れたい材質で、ブレとして表示したい刃部分の頂点を選択してください。\n・選択する順番は不問です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
     },
     {
         "id": "生成失敗",
@@ -113,7 +117,7 @@
     },
     {
         "id": "生成成功メッセージ",
-        "translation": "ブレ設定付きモデルの生成に成功しました\n元モデルの上にプレビューモデルが回っています\n【確認事項】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.4 の刃頂点の選択から必要な頂点の選択が抜けています。\n　　その場合は頂点を選び直して、再度プレビュー表示ボタンをクリックしてください"
+        "translation": "ブレ設定付きモデルの生成に成功しました\n元モデルの上にプレビューモデルが回っています\n【確認事項】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください　　\n（ブレ部分が分かりやすいよう、赤モーフを加えています）\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.5 の刃頂点の選択から必要な頂点の選択が抜けています。\n　　その場合は「やり直し」ボタンからやり直してください。"
     },
     {
         "id": "出力失敗",
