--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -104,6 +104,10 @@
         "translation": "・ブレ設定を入れたい材質で、ブレとして表示したい刃部分の頂点を選択してください。\n・選択する順番は不問です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
     },
     {
+        "id": "Step5失敗",
+        "translation": "ブレ設定対象刃頂点が選択されていません。\nブレとして表示したい刃部分の頂点を選択してください。"
+    },
+    {
         "id": "生成失敗",
         "translation": "生成失敗"
     },
@@ -133,7 +137,7 @@
     },
     {
         "id": "出力成功メッセージ",
-        "translation": "ブレ設定付きモデルの出力に成功しました\n{{.Path}}"
+        "translation": "ブレ設定付きモデルの出力に成功しました\nデフォルトではブレ材質{{.Path}}"
     },
     {
         "id": "出力モデルなし",
@@ -142,5 +146,9 @@
     {
         "id": "出力モデルなしメッセージ",
         "translation": "出力可能なブレ設定付きモデルが見つかりませんでした。\nプレビューをやり直してください"
+    },
+    {
+        "id": "設定失敗",
+        "translation": "設定失敗"
     }
 ]
