--- a/cmd/i18n/app.ko.json
+++ b/cmd/i18n/app.ko.json
@@ -5,11 +5,11 @@
     },
     {
         "id": "ブレ生成対象モデルPmxファイルを選択してください",
-        "translation": "블러 생성 대상 모델 Pmx 파일을 선택하십시오"
+        "translation": "블러 생성 대상 모델 Pmx 파일을 선택하세요"
     },
     {
         "id": "ブレ生成対象モデルの使い方",
-        "translation": "- 블러 설정을 추가할 Pmx 모델을 설정할 수 있습니다.\n- 모델 이름 필드의 문자열을 선택할 수 있습니다."
+        "translation": "블러 생성 대상 모델 사용법:\n・블러 설정을 추가하려는 Pmx 모델을 설정할 수 있습니다\n・모델 이름란의 문자열을 선택할 수 있습니다"
     },
     {
         "id": "確認用モーション(Vmd/Vpd)",
@@ -17,11 +17,11 @@
     },
     {
         "id": "確認用モーション(Vmd/Vpd)ファイルを選択してください",
-        "translation": "확인용 모션 (Vmd/Vpd) 파일을 선택하십시오"
+        "translation": "확인용 모션 (Vmd/Vpd) 파일을 선택하세요"
     },
     {
         "id": "確認用モーションの使い方",
-        "translation": "- 모션 Vmd 또는 Vpd를 설정할 수 있습니다.\n- 모션 내의 모델 이름 필드의 문자열을 선택할 수 있습니다."
+        "translation": "확인용 모션 사용법:\n・임의로 모션 Vmd 또는 Vpd를 설정할 수 있습니다\n・모션 내의 모델 이름란의 문자열을 선택할 수 있습니다"
     },
     {
         "id": "出力モデル(Pmx)",
@@ -29,10 +29,126 @@
     },
     {
         "id": "出力モデル(Pmx)ファイルパスを指定してください",
-        "translation": "출력 모델 (Pmx) 파일 경로를 지정하십시오"
+        "translation": "출력 모델 (Pmx) 파일 경로를 지정하세요"
     },
     {
         "id": "出力モデルの使い方",
-        "translation": "- 블러 설정이 있는 모델의 출력 파일 경로를 설정할 수 있습니다.\n- 출력 경로는 자동으로 설정되지만, 원하는 경로로 변경할 수 있습니다."
+        "translation": "출력 모델 사용법:\n・블러 설정이 추가된 모델의 출력 파일 경로를 설정할 수 있습니다\n・출력 경로가 자동으로 설정되지만 원하는 경로로 변경할 수도 있습니다"
+    },
+    {
+        "id": "次へ進む",
+        "translation": "다음 단계로 진행"
+    },
+    {
+        "id": "保存",
+        "translation": "저장"
+    },
+    {
+        "id": "プレビュー",
+        "translation": "미리보기"
+    },
+    {
+        "id": "リトライ",
+        "translation": "미리보기를 취소하고 다시 조정"
+    },
+    {
+        "id": "Step1Label",
+        "translation": "1단계:\n・블러 설정을 추가하려는 Pmx 모델을 지정하세요\n・모션 설정은 선택 사항입니다\n・모델 표시를 확인한 후 하단의 '다음 단계로 진행' 버튼을 클릭하세요"
+    },
+    {
+        "id": "Step1成功",
+        "translation": "블러 설정 대상 모델이 정상적으로 로드되었습니다.\n2단계 탭으로 진행합니다"
+    },
+    {
+        "id": "Step1失敗",
+        "translation": "블러 설정 대상 모델 로드에 실패했습니다.\n올바른 파일 경로가 지정되었는지 확인하세요"
+    },
+    {
+        "id": "Step2Label",
+        "translation": "2단계:\n・블러 설정을 추가하려는 재질만 선택된 상태로 두세요\n・일본도의 경우, 칼날 관련 재질만 선택하세요"
+    },
+    {
+        "id": "Step2成功",
+        "translation": "블러 설정 대상 재질이 정상적으로 설정되었습니다.\n3단계 탭으로 진행합니다"
+    },
+    {
+        "id": "Step2失敗",
+        "translation": "블러 설정 대상 재질이 선택되지 않았습니다.\n블러를 추가하려는 재질을 하나 이상 선택하세요"
+    },
+    {
+        "id": "Step3Label",
+        "translation": "3단계:\n・블러 설정을 추가하려는 재질의 융 부분의 시작 지점을 하나 선택하세요\n・일본도의 경우, 무네마치입니다\n・중복되는 위치에 있는 정점이 있는 경우, 쉼표로 구분하여 표시됩니다\n・잘못 선택한 정점은 다시 선택하면 선택이 해제됩니다"
+    },
+    {
+        "id": "Step3成功",
+        "translation": "블러 설정 대상 융 시작 정점이 정상적으로 설정되었습니다.\n4단계 탭으로 진행합니다"
+    },
+    {
+        "id": "Step3失敗",
+        "translation": "블러 설정 대상 융 시작 정점이 선택되지 않았습니다.\n블러 설정을 추가하려는 재질의 융 부분의 시작 지점을 하나 선택하세요"
+    },
+    {
+        "id": "Step4Label",
+        "translation": "4단계:\n・블러 설정을 추가하려는 재질의 칼끝 부분의 정점을 하나 선택하세요\n・중복되는 위치에 있는 정점이 있는 경우, 쉼표로 구분하여 표시됩니다\n・잘못 선택한 정점은 다시 선택하면 선택이 해제됩니다"
+    },
+    {
+        "id": "Step4成功",
+        "translation": "블러 설정 대상 칼끝 정점이 정상적으로 설정되었습니다.\n5단계 탭으로 진행합니다"
+    },
+    {
+        "id": "Step4失敗",
+        "translation": "블러 설정 대상 칼끝 정점이 선택되지 않았습니다.\n블러 설정을 추가하려는 재질의 칼끝 부분의 정점을 하나 선택하세요"
+    },
+    {
+        "id": "Step5Label",
+        "translation": "5단계:\n・블러로 표시하려는 재질의 칼 부분의 정점을 선택하세요\n・선택 순서는 상관없습니다\n・중복되는 위치에 있는 정점이 있는 경우, 쉼표로 구분하여 표시됩니다\n・잘못 선택한 정점은 다시 선택하면 선택이 해제됩니다"
+    },
+    {
+        "id": "Step5失敗",
+        "translation": "블레이드 설정 대상 정점이 선택되지 않았습니다.\n블레이드로 표시하고 싶은 블레이드 부분의 정점을 선택하십시오."
+    },
+    {
+        "id": "生成失敗",
+        "translation": "생성 실패"
+    },
+    {
+        "id": "生成成功",
+        "translation": "생성 성공"
+    },
+    {
+        "id": "生成失敗メッセージ",
+        "translation": "블러 설정이 포함된 모델 생성에 실패했습니다\n오류 메시지: {{.Error}}"
+    },
+    {
+        "id": "生成成功メッセージ",
+        "translation": "블러 설정이 포함된 모델 생성에 성공했습니다\n원본 모델 위에 미리보기 모델이 회전 중입니다\n[확인 사항]\n・융 쪽으로만 블러가 확장되는지 확인하세요 …\n　모멘텀을 표현하기 위해 블러 재질이 융 쪽으로만 확장되도록 설정했습니다\n　(내려치는 방향의 반대 방향으로 블러 재질이 확장됨)\n　블러가 이상한 방향으로 확장되지 않았는지 확인하세요\n　(블러 부분을 더 잘 보이게 하기 위해 빨간 모프를 추가했습니다)\n・블러 재질에 누락된 정점이 없는지 확인하세요 …\n　융 쪽 정점만 블러로 확장되도록 설정하고, 칼 쪽 정점은 본체에 따라가도록 설정했습니다.\n　블러 재질에 구멍이 있는 경우, 5단계의 칼 정점 선택에서 필요한 정점 선택이 누락된 것입니다.\n　이 경우 '다시 시도' 버튼을 눌러 다시 시작하세요"
+    },
+    {
+        "id": "出力失敗",
+        "translation": "출력 실패"
+    },
+    {
+        "id": "出力成功",
+        "translation": "출력 성공"
+    },
+    {
+        "id": "出力失敗メッセージ",
+        "translation": "블러 설정이 포함된 모델 출력에 실패했습니다\n오류 메시지: {{.Error}}"
+    },
+    {
+        "id": "出力成功メッセージ",
+        "translation": "블러 설정이 포함된 모델 출력에 성공했습니다\n기본적으로 블러 재질 {{.Path}}"
+    },
+    {
+        "id": "出力モデルなし",
+        "translation": "출력 모델 없음"
+    },
+    {
+        "id": "出力モデルなしメッセージ",
+        "translation": "출력 가능한 블러 설정이 포함된 모델을 찾을 수 없습니다.\n미리보기를 다시 시도하세요"
+    },
+    {
+        "id": "設定失敗",
+        "translation": "설정 실패"
     }
 ]
