--- a/cmd/i18n/app.zh.json
+++ b/cmd/i18n/app.zh.json
@@ -1,7 +1,7 @@
 [
     {
         "id": "ブレ生成対象モデル(Pmx)",
-        "translation": "模糊生成目标模型 (Pmx)"
+        "translation": "模糊生成目标模型(Pmx)"
     },
     {
         "id": "ブレ生成対象モデルPmxファイルを選択してください",
@@ -9,19 +9,19 @@
     },
     {
         "id": "ブレ生成対象モデルの使い方",
-        "translation": "- 您可以设置想要添加模糊设置的Pmx模型。\n- 模型名称字段中的字符串可以选择。"
+        "translation": "模糊生成目标模型的使用方法:\n・可以设置要添加模糊设置的Pmx模型\n・可以选择模型名称字段中的字符串"
     },
     {
         "id": "確認用モーション(Vmd/Vpd)",
-        "translation": "确认用动作 (Vmd/Vpd)"
+        "translation": "确认用运动文件 (Vmd/Vpd)"
     },
     {
         "id": "確認用モーション(Vmd/Vpd)ファイルを選択してください",
-        "translation": "请选择确认用动作 (Vmd/Vpd) 文件"
+        "translation": "请选择确认用运动文件 (Vmd/Vpd)"
     },
     {
         "id": "確認用モーションの使い方",
-        "translation": "- 您可以选择设置动作Vmd或Vpd。\n- 动作中的模型名称字段中的字符串可以选择。"
+        "translation": "确认用运动文件的使用方法:\n・可以任意设置运动Vmd或Vpd\n・可以选择运动中模型名称字段中的字符串"
     },
     {
         "id": "出力モデル(Pmx)",
@@ -33,6 +33,122 @@
     },
     {
         "id": "出力モデルの使い方",
-        "translation": "- 您可以设置带有模糊设置的模型输出路径。\n- 输出路径会自动设置，但您可以更改为任意路径。"
+        "translation": "输出模型的使用方法:\n・可以设置包含模糊设置的模型的输出文件路径\n・默认会自动设置输出路径，但也可以更改为任意路径"
+    },
+    {
+        "id": "次へ進む",
+        "translation": "继续下一步"
+    },
+    {
+        "id": "保存",
+        "translation": "保存"
+    },
+    {
+        "id": "プレビュー",
+        "translation": "预览"
+    },
+    {
+        "id": "リトライ",
+        "translation": "取消预览并重新调整"
+    },
+    {
+        "id": "Step1Label",
+        "translation": "步骤 1:\n・请指定要添加模糊设置的Pmx模型\n・运动设置是可选的\n・确认模型显示后，点击底部的“继续下一步”按钮"
+    },
+    {
+        "id": "Step1成功",
+        "translation": "模糊设置目标模型已成功加载。\n前往步骤2标签"
+    },
+    {
+        "id": "Step1失敗",
+        "translation": "模糊设置目标模型加载失败。\n请检查是否指定了正确的文件路径"
+    },
+    {
+        "id": "Step2Label",
+        "translation": "步骤 2:\n・确保只选择了要添加模糊设置的材质\n・对于日本刀，只选择与刀刃相关的材质"
+    },
+    {
+        "id": "Step2成功",
+        "translation": "模糊设置目标材质已成功设置。\n前往步骤3标签"
+    },
+    {
+        "id": "Step2失敗",
+        "translation": "没有选择模糊设置目标材质。\n请选择一个或多个要添加模糊设置的材质"
+    },
+    {
+        "id": "Step3Label",
+        "translation": "步骤 3:\n・选择要添加模糊设置的材质的峰部分的起始顶点\n・对于日本刀，这里是棱区\n・如果同一位置有重叠的顶点，则用逗号分隔显示\n・如果错误选择了顶点，再次选择以取消选择"
+    },
+    {
+        "id": "Step3成功",
+        "translation": "模糊设置目标峰起始顶点已成功设置。\n前往步骤4标签"
+    },
+    {
+        "id": "Step3失敗",
+        "translation": "没有选择模糊设置目标峰起始顶点。\n请选择要添加模糊设置的材质的峰部分的一个起始顶点"
+    },
+    {
+        "id": "Step4Label",
+        "translation": "步骤 4:\n・选择要添加模糊设置的材质的刀尖部分的一个顶点\n・如果同一位置有重叠的顶点，则用逗号分隔显示\n・如果错误选择了顶点，再次选择以取消选择"
+    },
+    {
+        "id": "Step4成功",
+        "translation": "模糊设置目标刀尖顶点已成功设置。\n前往步骤5标签"
+    },
+    {
+        "id": "Step4失敗",
+        "translation": "没有选择模糊设置目标刀尖顶点。\n请选择要添加模糊设置的材质的刀尖部分的一个顶点"
+    },
+    {
+        "id": "Step5Label",
+        "translation": "步骤 5:\n・选择要显示为模糊的材质的刃部分的顶点\n・选择顺序不受限制\n・如果同一位置有重叠的顶点，则用逗号分隔显示\n・如果错误选择了顶点，再次选择以取消选择"
+    },
+    {
+        "id": "Step5失敗",
+        "translation": "未选择要设置刀片的目标顶点。\n请选择要显示为刀片的部分的顶点。"
+    },
+    {
+        "id": "生成失敗",
+        "translation": "生成失败"
+    },
+    {
+        "id": "生成成功",
+        "translation": "生成成功"
+    },
+    {
+        "id": "生成失敗メッセージ",
+        "translation": "生成包含模糊设置的模型失败\n错误信息: {{.Error}}"
+    },
+    {
+        "id": "生成成功メッセージ",
+        "translation": "生成包含模糊设置的模型成功\n预览模型正在原始模型上旋转\n【检查事项】\n・确保模糊仅向峰侧延伸 …\n　为了表示势头，模糊材质设置为仅向峰侧延伸\n　（模糊材质向挥下方向的反方向延伸）\n　请检查模糊是否没有向奇怪的方向延伸\n　（为了使模糊部分更明显，添加了红色变形）\n・确保模糊材质中没有缺失的顶点 …\n　只有峰侧的顶点设置为延伸为模糊，刃侧的顶点跟随主体。\n　如果模糊材质中有孔洞，则表示在步骤5中刃顶点选择中遗漏了一些必要的顶点。\n　在这种情况下，请从“重试”按钮重新开始"
+    },
+    {
+        "id": "出力失敗",
+        "translation": "输出失败"
+    },
+    {
+        "id": "出力成功",
+        "translation": "输出成功"
+    },
+    {
+        "id": "出力失敗メッセージ",
+        "translation": "输出包含模糊设置的模型失败\n错误信息: {{.Error}}"
+    },
+    {
+        "id": "出力成功メッセージ",
+        "translation": "成功输出包含模糊设置的模型\n默认情况下，模糊材质{{.Path}}"
+    },
+    {
+        "id": "出力モデルなし",
+        "translation": "无输出模型"
+    },
+    {
+        "id": "出力モデルなしメッセージ",
+        "translation": "未找到可输出的包含模糊设置的模型。\n请重新进行预览"
+    },
+    {
+        "id": "設定失敗",
+        "translation": "设置失败"
     }
 ]
