--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -121,7 +121,7 @@
     },
     {
         "id": "生成成功メッセージ",
-        "translation": "ブレ設定付きモデルの生成に成功しました\n元モデルの上にプレビューモデルが回っています\n【確認事項】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください　　\n（ブレ部分が分かりやすいよう、赤モーフを加えています）\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.5 の刃頂点の選択から必要な頂点の選択が抜けています。\n　　その場合は「やり直し」ボタンからやり直してください。"
+        "translation": "ブレ設定付きモデルの生成に成功しました\n元モデルの上にプレビューモデルが回っています\n【確認事項】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください\n　　（ブレ部分が分かりやすいよう、赤モーフを加えています）\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.5 の刃頂点の選択が不足しています。\n　　Step.5の2番目にある「再調整」ボタンをクリックすると編集モードに戻れます。"
     },
     {
         "id": "出力失敗",
@@ -137,7 +137,7 @@
     },
     {
         "id": "出力成功メッセージ",
-        "translation": "ブレ設定付きモデルの出力に成功しました\nデフォルトではブレ材質{{.Path}}"
+        "translation": "ブレ設定付きモデルの出力に成功しました\nデフォルトではブレ材質を非表示にしてますので、表示モーフを入れてください\n参考までにプレビューに使用したモーションも出力しています\n{{.Path}}"
     },
     {
         "id": "出力モデルなし",
