矩形選択導入

--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -40,6 +40,10 @@
         "translation": "次へ進む"
     },
     {
+        "id": "クリア",
+        "translation": "入力をクリアする"
+    },
+    {
         "id": "保存",
         "translation": "保存する"
     },
@@ -101,7 +105,7 @@
     },
     {
         "id": "Step5Label",
-        "translation": "・ブレ設定を入れたい材質で、ブレとして表示したい刃部分の頂点を選択してください。\n・選択する順番は不問です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
+        "translation": "・ブレ設定を入れたい材質で、ブレとして表示したい刃部分の頂点を選択してください。\n・選択する順番は任意です。\n・場所が重複する頂点がある場合、カンマ区切りで表示します\n・誤って選択した頂点は、もう一度選択すると選択が解除されます。"
     },
     {
         "id": "Step5失敗",
@@ -121,7 +125,7 @@
     },
     {
         "id": "生成成功メッセージ",
-        "translation": "ブレ設定付きモデルの生成に成功しました\n元モデルの上にプレビューモデルが回っています\n【確認事項】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください\n　　（ブレ部分が分かりやすいよう、赤モーフを加えています）\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.5 の刃頂点の選択が不足しています。\n　　Step.5の2番目にある「再調整」ボタンをクリックすると編集モードに戻れます。"
+        "translation": "ブレ設定付きモデルの生成に成功しました\n元モデルの上にプレビューモデルが回っています\n\n【確認していただきたい内容】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください\n　　（ブレ部分が分かりやすいよう、赤モーフを加えています）\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.5 の刃頂点の選択が不足しています。\n\n設定を変更したい場合、Step.5の2番目にある「プレビューを取り消して、再調整する」ボタンをクリックしてください。\n問題がなかった場合には「保存する」ボタンをクリックしてください。"
     },
     {
         "id": "出力失敗",
@@ -137,7 +141,7 @@
     },
     {
         "id": "出力成功メッセージ",
-        "translation": "ブレ設定付きモデルの出力に成功しました\nデフォルトではブレ材質を非表示にしてますので、表示モーフを入れてください\n参考までにプレビューに使用したモーションも出力しています\n{{.Path}}"
+        "translation": "ブレ設定付きモデルの出力に成功しました\nデフォルトではブレ材質を非表示にしてますので、表示モーフを入れてください\n参考までにプレビューに使用したモーションも出力しています\n\n{{.Path}}"
     },
     {
         "id": "出力モデルなし",
@@ -150,5 +154,61 @@
     {
         "id": "設定失敗",
         "translation": "設定失敗"
+    },
+    {
+        "id": "概要",
+        "translation": "ツール概要"
+    },
+    {
+        "id": "概要メッセージ",
+        "translation": "武器（主に刀を想定）にブレ設定を追加するためのツールです。\nブレは刀を振り下ろした時などに峰側に表示されます。\nデフォルトでは非表示となっており、モーフで透明度を調整して表示します。\nその他、色付けモーフやALモーフも作成します。"
+    },
+    {
+        "id": "Step1概要",
+        "translation": "Step.1 概要"
+    },
+    {
+        "id": "Step1メッセージ",
+        "translation": "ブレ設定を追加したいPMXモデルを「ブレ生成対象モデル」欄に設定してください。\n確認用モーションの設定は任意です\nモデルが正常に表示されたら、画面下部の「次へ進む」ボタンをクリックしてください。"
+    },
+    {
+        "id": "Step2概要",
+        "translation": "Step.2 概要"
+    },
+    {
+        "id": "Step2メッセージ",
+        "translation": "「ブレ生成対象モデル」に設定されたモデルの全材質のうち、ブレ設定を入れたい材質のみが選択されている状態にしてください。\n最初は全材質が選択されており、選択を外すと非表示になります。\nブレを設定したい材質のみが表示されている状態になったら、画面下部の「次へ進む」ボタンをクリックしてください。"
+    },
+    {
+        "id": "Step3概要",
+        "translation": "Step.3 概要"
+    },
+    {
+        "id": "Step3メッセージ",
+        "translation": "ブレ設定を入れたい材質から、ブレを発生させたい峰側の手元（ブレを伸ばしたい方向の手元）頂点を選んでください。\n選択された頂点から切っ先に向けての頂点にブレを生成します。\nStep.3 表示時にワイヤーフレームON、頂点選択機能ONになっています。\n重複頂点（同じ場所にある頂点）はカンマ区切りで表示します。\n根元頂点が一点選択できたら、画面下部の「次へ進む」ボタンをクリックしてください。"
+    },
+    {
+        "id": "Step4概要",
+        "translation": "Step.4 概要"
+    },
+    {
+        "id": "Step4メッセージ",
+        "translation": "ブレ設定を入れたい材質のうち、切っ先（ブレの終端）頂点を選んでください。\nStep.4 表示時にワイヤーフレームON、頂点選択機能ONになっています。\n重複頂点（同じ場所にある頂点）はカンマ区切りで表示します。\n切っ先頂点が一点選択できたら、画面下部の「次へ進む」ボタンをクリックしてください。"
+    },
+    {
+        "id": "Step5概要",
+        "translation": "Step.5 概要"
+    },
+    {
+        "id": "Step5メッセージ",
+        "translation": "ブレ設定を入れたい材質のうち、ブレを発生させたい刃側の頂点を選んでください。\n選択された頂点群と、Step3で選んだ峰頂点、Step4で選んだ切っ先頂点の間の頂点に対して、ブレ材質を生成します。\n選択する順番は任意です。\n刃側の頂点選択が完了したら、画面下部の「プレビューで確認する」ボタンをクリックしてください。"
+    },
+    {
+        "id": "Step5プレビュー概要",
+        "translation": "Step.5 プレビュー概要"
+    },
+    {
+        "id": "Step5プレビューメッセージ",
+        "translation": "「プレビューで確認する」ボタンをクリックすると、元モデルの上にブレを追加したモデルをプレビュー表示します。\n（カメラの動かし方はメニュー＞ビューワー＞使い方、を参照してください）\n\n【確認していただきたい内容】\n・峰側にだけブレが伸びているか … \n　　勢いを表すため、ブレ材質は峰側にだけ伸びるように設定しています\n　　（振り下ろす方向と逆方向にブレ材質が伸びる）\n　　おかしな方向にブレが伸びていないかを確認してください\n　　（ブレ部分が分かりやすいよう、赤モーフを加えています）\n・ブレ材質に頂点の抜けがないか … \n　　峰側の頂点だけブレとして伸びるように設定し、刃側の頂点は本体に追従させています。\n　　ブレ材質に穴が空いている場合、Step.5 の刃頂点の選択が不足しています。\n\n設定を変更したい場合、Step.5の2番目にある「プレビューを取り消して、再調整する」ボタンをクリックしてください。\n（プレビュー中も編集はできますが、「プレビューで確認する」ボタンをクリックしないと新しい設定は反映されません）\n問題がなかった場合には「保存する」ボタンをクリックしてください。"
     }
 ]
